--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'World War, 1914-1918'
 - !lcc 'D501'
+- GITenberg
 title: History of the World War, Vol. 3
 url: http://www.gutenberg.org/ebooks/16282
